--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 </head>
 
 <body onload="onload()">
-    <label for="label1">Hallo, Welt</label>
-    <button onclick="einfügen()">click</button>
+    <label for="label1">Auto Put ...</label>
+    
 </body>
 
 </html>
