--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
         }
 
-
+        //curl [https://nik2890.github.io/AutoPut/index.html](https://nik2890.github.io/AutoPut/index.htm)
+        
         //################################################################################
         function iniSupabase() {
             const supabaseUrl = "https://hskeowlqxzmjfsaxwadj.supabase.co";
